# Lab

./: kochplot.py  mengerPlot.py  mengerc.cpp
mengerc++/: CMakeLists.txt  main.cpp  vcpkg.json
